# UCI_F1tenth_slides

./: pyproject.toml
labs/lab1/: lab1.html  lab1.py
labs/lab1p2/: lab1p2.py
labs/lab2/: lab2.py
labs/lab3/: test.typ
